package Lab2;

public interface SaleableItem {
    void sellCopy();
    double getPrice();
}